<resources>
    <string name="app_name" translatable="false">Avocare</string>
    <string name="scan_barcode_btn_text">Scan barcode</string>
    <string name="type_composition_btn_text">Type Composition</string>
    <string name="search_by_product_name_btn_text">Search product</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="general_safety_level_label">General safety level</string>
    <string name="no_history_to_display">No history to display yet.</string>
    <string name="composition_header">Composition</string>
    <string name="Composition">Composition</string>
    <string name="report_error">Report error</string>
    <string name="change_app_lang">Language:</string>
    <string name="about_text">This app has been created in 2016 by Oleksandra Liutova as a Bachelor Thesis at Czech Technical University in Prague.</string>
    <string name="help_text">If you have any questions, problems or suggestions, please, contact us at this email: liutoole@fit.cvut.cz</string>
    <string name="save">Save</string>
    <string name="product_not_found">Product not found. You can get it\'s healthiness estimation by entering its composition yourself:</string>
    <string name="saved">Saved</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="removed_from_favourites">Removed from favourites</string>
    <string name="number">#</string>
    <string name="name">Name</string>
    <string name="safety_level">Safety level</string>
    <string name="type_of_error">Type of error:</string>
    <string name="description">Description...</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="report_sent">Report sent. Thank you for your feedback!</string>
    <string name="enter_product_name_here">Enter product name here...</string>
    <string name="no_description">This substance has no description available yet.</string>
    <string name="safety_level_is">Safety level is</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="my_allergens">My Allergens</string>
    <string name="favorites">Favorites</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="composition">Composition</string>
    <string name="home">Home</string>
    <string name="context">Content</string>
    <string name="syntax">Syntax</string>
    <string name="technical">Technical</string>
    <string name="Continue">Continue</string>
    <string name="substance_not_found">Unfortunately, we haven\'t been able to find this substance in our database.</string>
    <string name="unknown">unknown</string>
    <string name="no_favorites">No favorites yet.</string>
    <string name="products">Products</string>
    <string name="product_details">Product Details</string>
</resources>
