<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/type_of_error" />

        <Spinner
            android:id="@+id/error_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <EditText
        android:id="@+id/error_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/report_error_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/report_error_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send" />

    </LinearLayout>


</LinearLayout>