<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:orientation="horizontal"
    android:weightSum="10"
    android:background="@color/Transparent">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|left"
        android:text="@string/number"
        android:textColor="@color/BackgroundColor"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:gravity="center_vertical|left"
        android:text="@string/name"
        android:textColor="@color/BackgroundColor"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:text="@string/safety_level"
        android:textColor="@color/BackgroundColor"
        android:textStyle="bold"/>

</LinearLayout>