<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.MainActivity"
    android:weightSum="748">

    <LinearLayout
        android:id="@+id/main_menu_btn_barcode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="256"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:src="@drawable/icon_scan"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:weightSum="100"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="46"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:text="@string/scan_barcode_btn_text"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:gravity="center_vertical|left"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_menu_btn_product_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="233"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:src="@drawable/icon_search"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:weightSum="100"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:text="@string/search_by_product_name_btn_text"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:gravity="center_vertical|left"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_menu_btn_composition"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="259"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:src="@drawable/icon_type"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:weightSum="100"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="35"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:text="@string/type_composition_btn_text"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:gravity="center_vertical|left"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>